# Agent-OS-Kernel

./: .gitignore  ANALYSIS.md  CHANGELOG.md  DESIGN_EN.md  LICENSE  MODULES.md  PROJECT_SUMMARY.md  README.md  README_EN.md  fix_encoding.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: mypy.ini
.github/workflows/: ci.yml
agent_os_kernel/: __init__.py  kernel.py
agent_os_kernel/agents/: base.py  executor.py
agent_os_kernel/agents/communication/: __init__.py  collaboration.py  group_chat.py  knowledge_share.py  messenger.py
agent_os_kernel/cli/: __init__.py  commands.py  main.py
agent_os_kernel/core/: __init__.py  agent_migration.py  agent_pool.py  agent_pool_enhanced.py  agent_registry.py  api_gateway.py  async_queue.py  batch_processor.py  benchmark.py  bulkhead.py  cache_system.py  cache_system_enhanced.py  cache_utils.py  checkpointer.py  circuit_breaker.py  command_pattern.py  config_hot_reload.py  config_manager.py  config_manager_enhanced.py  connection_pool.py  context_manager.py  countdown_timer.py  distributed_lock.py  distributed_scheduler.py  error_handler.py  event_bus.py  event_bus_enhanced.py  event_system_advanced.py  events.py  exceptions.py  gpu_manager.py  health_checker.py  lock_manager.py  logging_system.py  memory_feedback.py  message_queue.py  metrics.py  metrics_collector.py  monitoring_system.py  observability.py  (+23 more)
agent_os_kernel/distributed/: __init__.py  migration.py  scheduler.py
agent_os_kernel/integrations/: __init__.py  claude_integration.py
agent_os_kernel/llm/: __init__.py  factory.py  mock_provider.py  openai_impl.py  provider.py
agent_os_kernel/resources/: __init__.py  gpu.py  monitor.py
agent_os_kernel/tools/: __init__.py  base.py  builtin.py  registry.py
config/: README.md  config-example.yaml  config.example.yaml  docker-compose.dev.yml
development-docs/: 3DAY_PLAN.md  ITERATION_PLAN.md
docs/: CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_SETUP.md  INSPIRATION.md  MANIFESTO.md  PERFORMANCE.md  PERMISSION_ISSUES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  STEP_BY_STEP.md  TROUBLESHOOTING.md  agent_os_kernel_design.md  api-reference.md  batch-processing.md  caching.md  concurrency.md  optimized-scheduler.md  pipeline.md  quickstart.md  streaming.md  troubleshooting.md
examples/: README.md  agent_complete_demo.py  agent_lifecycle_demo.py  agent_os_kernel.py  agent_pool_enhanced_demo.py  api_complete_demo.py  basic_usage.py  benchmark.py  benchmark_demo.py  cache_system_demo.py  cli_commands_demo.py  context_management_demo.py  countdown_timer_demo.py  distributed_demo.py  distributed_lock_demo.py  event_system_advanced_demo.py  message_queue_demo.py  metrics_collector_demo.py  multi_agent_collaboration.py  multi_agent_demo.py  rate_limiter_demo.py  service_mesh_demo.py  using_providers.py  workflow_engine_demo.py
examples/advanced/: advanced_context_management.py  advanced_features_demo.py  advanced_workflow.py  async_queue_demo.py  batch_demo.py  cache_demo.py  circuit_breaker_demo.py  metrics_demo.py  optimized_scheduler_demo.py  state_machine_demo.py  stream_demo.py
examples/api/: api_demo.py  event_bus_demo.py  websocket_api.py
examples/basic/: batch_processor_demo.py  checkpointer_demo.py  circuit_breaker_demo.py  event_bus_demo.py  memory_feedback_demo.py  observability_demo.py  optimized_scheduler_demo.py  sliding_window_demo.py  tool_memory_demo.py  worker_demo.py  workflow_engine_demo.py
examples/distributed/: distributed.py
examples/integration/: claude_integration_example.py
examples/learning/: agent_learning.py  agent_patterns.py
examples/llm/: claude_example.py  claude_integration.py  local_llm_demo.py
examples/multi_agent/: multi_agent_coordination.py
examples/optimization/: optimization_demo.py
examples/plugins/: plugin_development.py  plugins.py
examples/quickstart/: quickstart_demo.py
examples/storage/: postgres_storage.py  postgresql_integration.py
examples/tools/: agent_spawning.py  mcp_integration.py
examples/workflow/: complete_workflow.py  pipeline_demo.py  production_workflow.py  workflow_demo.py  workflow_orchestration.py
research/: README.md
research/analysis/: AIOS_ANALYSIS.md
research/framework/: research_agentops.md  research_agentql.md  research_agno.md  research_aiplatform.md  research_autogpt.md  research_crewai.md  research_haystack.md  research_langchain.md  research_langchain_agents.md  research_langgraph.md  research_microsoft_autogen.md  research_openagents.md  research_supergpt.md
research/summary/: research_projects.md  research_summary.md
scripts/: push-to-github.sh
tests/: __init__.py  test_advanced_features.py  test_agent_definition.py  test_agent_pool_enhanced.py  test_async_queue.py  test_batch_processor.py  test_benchmark.py  test_cache_system.py  test_cache_system_enhanced.py  test_circuit_breaker.py  test_connection_pool.py  test_context_manager.py  test_countdown_timer.py  test_distributed_lock.py  test_enhanced_modules.py  test_event_bus.py  test_event_system_advanced.py  test_integration.py  test_kernel.py  test_memory_enhancement.py  test_message_queue.py  test_metrics.py  test_metrics_collector.py  test_mock_provider.py  test_observability.py  test_observer_pattern.py  test_optimized_scheduler.py  test_pipeline.py  test_plugins.py  test_rate_limiter.py  test_rate_limiter_enhanced.py  test_retry_mechanism.py  test_scheduler.py  test_security.py  test_service_mesh.py  test_state_machine.py  test_storage.py  test_task_scheduler.py  test_tools.py  test_types.py  (+2 more)
