[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os-kernel"
version = "0.2.0"
description = "AI Agent Operating System Kernel - 填补 Agent 生态中'缺失的内核'"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "bit-cook", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]
docker = [
    "docker>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/bit-cook/Agent-OS-Kernel"
Repository = "https://github.com/bit-cook/Agent-OS-Kernel"
Issues = "https://github.com/bit-cook/Agent-OS-Kernel/issues"

[project.scripts]
agent-os-kernel = "agent_os_kernel.__main__:main"

[tool.setuptools.packages.find]
include = ["agent_os_kernel*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agent_os_kernel"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tool.darker]
src = ["agent_os_kernel", "tests"]
line_length = 100
