[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os-kernel"
version = "0.2.0"
description = "AI Agent Operating System Kernel - 填补 Agent 生态中'缺失的内核'"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "bit-cook", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/bit-cook/Agent-OS-Kernel"
Repository = "https://github.com/bit-cook/Agent-OS-Kernel"
Issues = "https://github.com/bit-cook/Agent-OS-Kernel/issues"

[project.scripts]
agent-os-kernel = "agent_os_kernel.__main__:main"

[tool.setuptools.packages.find]
include = ["agent_os_kernel*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
